# ogs

./: .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  REQUIREMENTS  RoadMap.md  STATUS  _CoqProject  coq-ogs.opam  dune-project
coq/: README.md  _CoqProject  coq-ogs.opam  dune-project
coq/theories/: Prelude.v  Utils.v  dune
docs/: Abstract.html  Adequacy.html  All.html  Assignment.html  Checks.html  CompGuarded.html  Congruence.html  Covering.html  Ctx.html  Delay.html  DirectSum.html  Eq.html  Event.html  Family.html  Game.html  Guarded.html  ITree.html  Machine.html  NamedTerm.html  NfBisim.html  Notations.html  Obs.html  Prelude.html  Properties.html  Psh.html  Readme.html  Rel.html  Renaming.html  STLC_CBV.html  Soundness.html  Strategy.html  Structure.html  Subset.html  Subst.html  SystemD.html  SystemL_CBV.html  ULC_CBV.html
theories/: AngelicD.v  CatD.v  Checks.v  Ctx.v  EqD.v  EqProps.v  EventD.v  ITreeD.v  LC.v  LCD.v  LCProps.v  OGS.v  OGSD.v  Para.v  Poly.v  Prelude.v  Readme.v  RecD.v  Utils.v  dune
theories/Ctx/: Abstract.v  All.v  Assignment.v  Covering.v  Ctx.v  DirectSum.v  Family.v  Renaming.v  Solver.v  Subset.v  Subst.v
theories/Examples/: STLC_CBV.v  SystemD.v  SystemL.v  SystemL_CBV.v  ULC_CBV.v  stlc.v
theories/Game/: HalfGame.v
theories/ITree/: Angelic.v  Delay.v  Dual.v  Eq.v  Event.v  Guarded.v  ITree.v  Properties.v  Rec.v  Structure.v
theories/OGS/: Adequacy.v  CompGuarded.v  Congruence.v  Game.v  HalfGame.v  Machine.v  NamedTerm.v  NfBisim.v  Obs.v  Soundness.v  Spec.v  Strategy.v  Subst.v  Utility_lemmas.v  spec'.v
(+54 files in other folders)
